# loglab

./: loglab.sln  readme.md
.github/workflows/: build.yml
chat/: .env  .env.prod  index.html  package-lock.json  package.json
chat/src/: App.vue  style.css
chat/src/components/: ChatBox.vue  LogBox.vue
cli/: README.md
cli/rust/: Cargo.toml
cli/rust/src/: main.rs
cli/src/: main.rs
server/: Cargo.toml  LogLab.Server.csproj  Program.cs  README.md  SessionIdGenerator.cs  server-dotnet.sln
server-dotnet/: Program.cs
server/src/: main.rs
server/words/: adjectives.txt  nouns.txt  verbs.txt
