[package]
name = "loglab"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures-util = "0.3"
url = "2.5"
notify = { version = "6.1", features = ["macos_kqueue"] }
clap = { version = "4.5", features = ["derive"] } 